adjust page location

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a class="navbar-item" href="https://bulma.io/">
                     About
                 </a>
-                <a class="navbar-item" href="event.html">
+                <a class="navbar-item" href="pages/event.html">
                     Events
                 </a>
                 <div class="navbar-item has-dropdown is-hoverable">
